--- a/src/template.html
+++ b/src/template.html
@@ -15,35 +15,14 @@
 <body>
     <header class="header-container">
         <nav class="navigation-bar">
-            <button>Home</button>
-            <button>Menu</button>
-            <button>About</button>
+            <button class="home-button">Home</button>
+            <button class="menu-button">Menu</button>
+            <button class="about-button">About</button>
         </nav>
     </header>
     <div id="content">
-        <h1 class="heading-one">Pizza Plex's Place</h1>
-        <div class="card"><p>Pizza's has the best porridge! The atmosphere and customer service make you feel like you are sitting in the middle of the pizza sea, eating like a cool guy! This is exactly the kind of place that I like to return to again and again.</p>
 
-            <h1>Stasik</h1>
-        </div>
-        <div class="card">
-            <h1>Hours</h1>
-            <ul>
-                <li>Sunday: 8am - 8pm</li>
-                <li>Monday: 6am - 6pm</li>
-                <li>Tuesday: 6am - 6pm</li>
-                <li>Wednesday: 6am - 6pm</li>
-                <li>Thursday: 6am - 10pm</li>
-                <li>Friday: 6am - 10pm</li>
-                <li>Saturday: 8am - 10pm</li>
-            </ul>
-        </div>
-        <div class="card">
-            <h1>Location</h1>
-            <p>123 Forest Drive, Forestville, Maine</p>
-        </div>
-        <img class="pizza-image-one" src="withoutbackground.png" alt="pizza">
-        <img class="pizza-image-two" src="withoutbackground.png" alt="pizza">
     </div>
+    <script type="module" src="./index.js"></script>
 </body>
 </html>
