--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-<head><script defer src="main.js"></script></head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Restraunt</title>
+    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Potta+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Potta+One&family=Yusei+Magic&display=swap" rel="stylesheet">
+<script defer src="main.js"></script></head>
+<body>
+    <header class="header-container">
+        <nav class="navigation-bar">
+            <button class="home-button">Home</button>
+            <button class="menu-button">Menu</button>
+            <button class="about-button">About</button>
+        </nav>
+    </header>
+    <div id="content">
+
+    </div>
+    <script type="module" src="acf87aca5b1dc5621bd1.js"></script>
+</body>
+</html>
